--- a/src/main/java/view/FrmPrincipal.form
+++ b/src/main/java/view/FrmPrincipal.form
@@ -252,7 +252,7 @@
                   </Group>
                   <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="12" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
