--- a/src/main/java/view/FrmPrincipal.form
+++ b/src/main/java/view/FrmPrincipal.form
@@ -261,6 +261,7 @@
     <Component class="javax.swing.JTextField" name="cxtBuscar">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cxtBuscarActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cxtBuscarKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnBuscar">
